chore: bootstrap repo

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,26 @@
 kani<2.0.0
+
+# openai
+kani[openai]<2.0.0
+
+# llava
+kani[huggingface,llama]<2.0.0
+llava @ git+https://github.com/haotian-liu/LLaVA.git@v1.1.1
+
+# dev
+black
+build
+isort
+pytest
+pytest-asyncio
+twine
+
+# docs
+furo~=2023.9.10
+myst-parser~=2.0.0
+sphinx~=7.2.6
+sphinxemoji~=0.2.0
+sphinx-copybutton~=0.5.2
+sphinx-inline-tabs~=2023.4.21
+sphinx-sitemap~=2.5.1
+sphinxext-opengraph~=0.8.2
