--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/YOUR_PACKAGE_NAME_HERE
+      url: https://pypi.org/p/kani-vision
     permissions:
       id-token: write
     steps:
