--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,14 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "kani-ext-YOURNAMEHERE"
+name = "kani-vision"
 version = "0.0.1"  # Update with your own version number
 authors = [
-    { name = "YOUR NAME HERE", email = "YOUR EMAIL HERE" },
+    { name = "Andrew Zhu", email = "andrew@zhu.codes" },
 ]
-description = "YOUR DESCRIPTION HERE"
+description = "Kani extension for supporting vision-language models (VLMs). Comes with model-agnostic support for GPT-Vision and LLaVA."
 readme = "README.md"
-#license = { file = "LICENSE" }  # Uncomment me after adding a license
+license = { file = "LICENSE" }
 requires-python = ">=3.10"
 classifiers = [
     # Your classifiers here: https://pypi.org/classifiers/
