--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "kani-vision"
-version = "0.0.1"  # Update with your own version number
+version = "0.0.1"
 authors = [
     { name = "Andrew Zhu", email = "andrew@zhu.codes" },
 ]
@@ -13,19 +13,56 @@ readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.10"
 classifiers = [
-    # Your classifiers here: https://pypi.org/classifiers/
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    # https://pypi.org/classifiers/
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Science/Research",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 dependencies = [
     "kani<2.0.0",
-    # Your dependencies here
+    "Pillow>=10.0.0,<11.0.0",
 ]
 
-# Uncomment if you want to link to some URLs from the PyPI page
-#[project.urls]
-#"Homepage" = "https://github.com/..."
-#"Bug Tracker" = "https://github.com/.../issues"
+[project.optional-dependencies]
+openai = [
+    "kani[openai]<2.0.0",
+]
+
+llava = [
+    "kani[huggingface,llama]<2.0.0",
+    "einops~=0.7.0",
+    "protobuf~=4.24.4",
+]
+
+ascii = [
+    "ascii_magic~=2.3.0",
+]
+
+[project.urls]
+"Homepage" = "https://github.com/zhudotexe/kani-vision"
+"Bug Tracker" = "https://github.com/zhudotexe/kani-vision/issues"
 
 # This tells the build system that the kani directory contains a namespace package
 # Don't touch it unless you know what you're doing!
 [tool.hatch.build.targets.wheel]
 packages = ["kani"]
+
+[tool.black]
+line-length = 120
+preview = true
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+
+[tool.isort]
+profile = "black"
+skip_gitignore = true
+line_length = 120
+known_first_party = ["kani"]
+# pycharm's import autosorting rules
+no_lines_before = "LOCALFOLDER"
+reverse_relative = true
+combine_as_imports = true
