--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 kani<2.0.0
+Pillow>=10.0.0,<11.0.0
 
 # openai
 kani[openai]<2.0.0
 
 # llava
 kani[huggingface,llama]<2.0.0
+einops~=0.7.0
+protobuf~=4.24.4
+
+# fun
+ascii_magic~=2.3.0
 
 # dev
 black
