--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -20,4 +20,6 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
+    - method: pip
+      path: "llava @ git+https://github.com/haotian-liu/LLaVA.git@v1.1.3"
     - requirements: requirements.txt
