--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
+  jobs:  # special install process for llava deps
+    post_install:
+      - pip install --no-deps "llava @ git+https://github.com/haotian-liu/LLaVA.git@v1.1.3"
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
@@ -20,6 +23,4 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-    - method: pip
-      path: "llava @ git+https://github.com/haotian-liu/LLaVA.git@v1.1.3"
     - requirements: requirements.txt
