--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ llava = [
     "accelerate~=0.23.0",
     "einops~=0.7.0",
     "protobuf~=4.24.4",
+    "transformers>=4.0.0,<5.0.0,!=4.35.0",
 ]
 
 ascii = [
