--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ accelerate~=0.23.0
 einops~=0.7.0
 protobuf~=4.24.4
 torch
+torchvision
+transformers>=4.0.0,<5.0.0,!=4.35.0  # 4.35 breaks a class for llava
 
 # fun
 ascii_magic~=2.3.0
